# Ethos

./: .env.example  .gitignore  README.md  render.yaml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/src/ethos_api/: __init__.py  auth.py  config.py  context_history.py  keepalive.py  main.py  mcp_auth.py  mcp_server.py  mcp_usage.py  middleware.py  schema.py  security.py  sources_status.py  sources_support.py  supabase_rest.py
api/src/ethos_api/account/: __init__.py  auth_admin.py  deps.py  mailer.py  models.py  purge_job.py  router.py  service.py
api/src/ethos_api/anime/: __init__.py  context.py  deps.py  router.py  service.py  store.py  summary.py
api/src/ethos_api/books/: __init__.py  context.py  deps.py  router.py  service.py  store.py  summary.py
api/src/ethos_api/connectors/: __init__.py  base.py  registry.py
api/src/ethos_api/connectors/anilist/: __init__.py  client.py  connector.py
api/src/ethos_api/connectors/applemusic/: __init__.py  (+1 more)
api/src/ethos_api/credentials/: __init__.py  deps.py  models.py  repository.py  router.py
api/src/ethos_api/feedback/: __init__.py  deps.py  mailer.py  models.py  repository.py  router.py
api/src/ethos_api/film/: __init__.py  context.py  deps.py  router.py  service.py  store.py  summary.py
api/src/ethos_api/games/: __init__.py  context.py  deps.py  router.py  service.py  store.py  summary.py
api/src/ethos_api/imports/: __init__.py  detection.py  router.py
api/src/ethos_api/interest/: __init__.py  deps.py  models.py  repository.py  router.py
api/src/ethos_api/items/: __init__.py  models.py  router.py  service.py  support.py
api/src/ethos_api/music/: __init__.py  context.py  deps.py  router.py  service.py  store.py  summary.py
api/src/ethos_api/oauth/: __init__.py  deps.py  models.py  router.py  store.py
api/tests/: conftest.py  helpers.py  test_auth.py  test_context_history.py  test_hardening.py  test_health.py  test_imports.py  test_keepalive.py  test_mcp.py  test_mcp_auth.py  test_security.py  test_supabase_repos.py
api/tests/account/: test_account_api.py
api/tests/anime/: helpers.py  test_anime_api.py  test_summary_service.py
api/tests/books/: helpers.py  test_books_api.py
api/tests/connectors/: test_anilist.py  test_applemusic.py  test_goodreads.py  test_hardcover.py  test_imdb.py  test_kitsu.py  test_lastfm.py  test_letterboxd.py  test_listenbrainz.py  test_mal.py  test_openlibrary.py  test_registry.py  test_spotify.py  test_steam_client.py  test_steam_connector.py  test_steam_openid.py  test_storygraph.py  test_trakt.py
api/tests/credentials/: test_credentials_api.py
api/tests/feedback/: test_feedback_api.py
api/tests/film/: helpers.py  test_film_api.py  test_summary_service.py
api/tests/fixtures/: listenbrainz_listens.json  steam_achievements.json  steam_owned_games.json  steam_player_summary.json  steam_recently_played.json  steam_wishlist.json
api/tests/games/: helpers.py  test_games_api.py  test_service.py  test_summary_context.py
api/tests/interest/: test_interest_api.py
api/tests/items/: test_items_api.py
api/tests/music/: helpers.py  test_import_service.py  test_music_api.py  test_summary_service.py
api/tests/oauth/: test_oauth_flow.py
(+192 files in other folders)
