[project]
name = "ethos-api"
version = "0.1.0"
description = "Backend de Ethos: API HTTP y servidor MCP (FastAPI + FastMCP)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Tope de major: fastmcp rompe API entre majors (el lock ya está en 3.x).
    "fastmcp>=3.4,<4",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Valida EmailStr (interés en categorías, sugerencias y contacto).
    "email-validator>=2",
    "httpx>=0.27,<1",
    "cryptography>=43",
    "pyjwt>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ethos_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# S (bandit): chequeos de seguridad; RUF: reglas propias de ruff.
select = ["E", "F", "I", "UP", "B", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
# En tests: asserts (S101) y secretos/tokens de prueba hardcodeados (S105/S106).
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI usa estas llamadas como valores por defecto de parámetros (patrón válido).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
# Cobertura siempre activa; el umbral bloquea regresiones de testeo.
addopts = "--cov=ethos_api --cov-report=term-missing --cov-fail-under=85"
